[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spanned-image"
version = "0.1.0"
description = "A Python module for scalling image to span across multiple monitor in X"
authors = [{ name = "Isaac", email = "isaacnugroho@gmail.com" }]
dependencies = []
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
